# ansible-ubuntu-dev-setup

./: .hadolint.yaml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: build-validation.yml
molecule/default/: README.md  converge.yml  molecule.yml  prepare.yml  verify.yml
playbooks/: install_docker.yml
src/ansible_ubuntu_dev_setup/: __init__.py
