[project]
name = "ansible-ubuntu-dev-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tony Klein", email = "mergemartialarts@tony-klein.de" }
]
requires-python = ">=3.14"
dependencies = [
    "ansible>=13.3.0",
]

[project.scripts]
ansible-ubuntu-dev-setup = "ansible_ubuntu_dev_setup:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ansible-dev-tools>=26.1.0",
    "molecule>=25.12.0",
    "molecule-plugins[docker]>=25.8.12",
    "pre-commit>=4.5.1",
]

# Exclude dev dependencies from default sync
# Use 'uv sync --dev' to install development tools
[tool.uv]
default-groups = []
